Fixed font links and whitespace wrap on about.php

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -25,6 +25,147 @@ $col-link-hover: #4CAF50;
 @import "spacing";
 
 /*----------------------------------------------------------------------------*/
+
+$a: 2s;
+$O: 0.6;
+$B: 12px;
+
+@keyframes rotarAll{
+  0% { transform: rotate3d(0); }
+  50% { transform: rotate3d(0.2, 0.5, -0.4, 180deg); }
+  100% { transform: rotate3d(1, 1, 1, 360deg); }
+}
+
+@keyframes rotarAll2{
+  0% { transform: rotate3d(0.2, -0.4, 0.8); }
+  50% { transform: rotate3d(0.2, -0.5, 0.3, 180deg); }
+  100% { transform: rotate3d(0.2, -0.4, 0.8, 360deg); }
+}
+
+@keyframes rotarAll3{
+  0% { transform: rotate3d(-0.3, 0.4, 0.1); }
+  50% { transform: rotate3d(0.7, 0.9, 0.6, 180deg); }
+  100% { transform: rotate3d(-0.3, 0.4, 0.1, 360deg); }
+}
+
+.rotate1 { animation: rotarAll $a -0.5s linear infinite; }
+.rotate2 { animation: rotarAll2 $a -0.25s linear infinite; }
+.rotate3 { animation: rotarAll3 $a -0.125s linear infinite; }
+
+.g {
+  position: relative;
+  height: 100px;
+}
+
+$D: 280px;
+$R: $D/2;
+
+.circle-1 {
+  color: rgb(220,220,226);
+  position: absolute;
+  top:50%;
+  left:50%;
+  margin-left:-$R;
+  margin-top:-$R;
+  width:$D;
+  height:$D;
+  text-align:center;
+  font-size:$R/4;
+  line-height:$D;
+  -webkit-font-smoothing: antialiased;
+}
+
+.circle-1:after,
+.circle-1:before{
+  content:"";
+  border-radius:100%;
+  position:absolute;
+  top:0; left:0;
+  width:100%;
+  height:100%;
+  transform-origin:center center;
+  box-shadow: inset 0 12px 0 rgba(250, 250, 0, 0.6), inset 12px 0 0 rgba(250, 200, 0, 0.6), inset 0 -12px 0 rgba(250, 150, 0, 0.6), inset -12px 0 0 rgba(250, 100, 0, 0.6);
+}
+
+.hexagon {
+  position: absolute;
+  width: 300px;
+  height: 173.21px;
+  margin: 86.60px 0;
+  background-size: auto 334.8632px;
+  background-position: center;
+  border-left: solid 5px rgba(250, 250, 0, 0.6);
+  border-right: solid 5px rgba(250, 100, 0, 0.6);
+  opacity: 0.8;
+  z-index: 23;
+}
+
+.hexTop,
+.hexBottom {
+  position: absolute;
+  z-index: 1;
+  width: 212.13px;
+  height: 212.13px;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 38.93px;
+  opacity: 0.8;
+  }
+
+  /*counter transform the bg image on the caps*/
+.hexTop:after,
+.hexBottom:after {
+  content: "";
+  position: absolute;
+  width: 290.0000px;
+  height: 167.4315780649915px;
+  -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-83.7158px);
+  -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-83.7158px);
+  transform:          rotate(45deg) scaleY(1.7321) translateY(-83.7158px);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+.hexTop {
+  top: -106.0660px;
+  border-top: solid 7.0711px rgba(250, 250, 0, 0.6);
+  border-right: solid 7.0711px rgba(250, 100, 0, 0.6);
+  box-shadow: inset 0 12px 0 rgba(250, 250, 0, 0.6), inset 0 0 0 rgba(250, 200, 0, 0.6), inset 0 0 0 rgba(250, 150, 0, 0.6), inset -12px 0 0 rgba(250, 100, 0, 0.6);
+}
+
+.hexTop:after {
+  background-position: center top;
+}
+
+.hexBottom {
+  bottom: -106.0660px;
+  border-bottom: solid 7.0711px rgba(250, 200, 0, 0.6);
+  border-left: solid 7.0711px rgba(250, 250, 0, 0.6);
+  box-shadow: inset 0 0 0 rgba(250, 250, 0, 0.6), inset 12px 0 0 rgba(250, 200, 0, 0.6), inset 0 -12px 0 rgba(250, 150, 0, 0.6), inset 0 0 0 rgba(250, 100, 0, 0.6);
+}
+
+.hexBottom:after {
+  background-position: center bottom;
+}
+
+.hexagon:after {
+  content: "";
+  position: absolute;
+  top: 2.8868px;
+  left: 0;
+  width: 290.0000px;
+  height: 167.4316px;
+  z-index: 2;
+  background: inherit;
+  box-shadow: inset 0 0 0 rgba(250, 250, 0, 0.6), inset 12px 0 0 rgba(250, 200, 0, 0.6), inset 0 0 0 rgba(250, 150, 0, 0.6), inset -12px 0 0 rgba(250, 100, 0, 0.6);
+}
+
+/*----------------------------------------------------------------------------*/
 /*Mixins*/
 
 @mixin transition($property, $duration, $effect, $delay) {
@@ -226,6 +367,7 @@ a.project-link {
   color: $col-link;
   @include transition(all, 0.2s, ease, 0.1s);
   &:hover { color: $col-link-hover!important; }
+  white-space: nowrap;
 }
 
 .light-border {
@@ -295,7 +437,7 @@ a.project-link {
   font-size: 12px;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  @media only screen and (max-width: $size-medium) {
-    display: block;
+  @media only screen and (max-width: $size-small) {
+    /*display: block;*/
   }
 }
